new font and url schema in footer added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -105,8 +106,8 @@
     <footer>
         <div id="contact" class="contact-footer">
           <h3>Contact</h3>
-          <p><strong>Email:</strong> name@example.com</p>
-          <p><strong>Telephone:</strong> +1234567890</p>
+          <p><strong>Email:</strong> <a href="mailto:name@example.com">name@example.com</a></p>
+          <p><strong>Telephone:</strong> <a href="tel:+1234567890">+1234567890</a></p>
         </div>
     </footer>
 </body>
